# aluwagcms

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
aluwagcms/: urls.py  wsgi.py
aluwagcms/settings/: base.py  dev.py  local.py
aluwagcms/templates/: base.html
country/: models.py
country/migrations/: 0001_initial.py
