[tool.poetry]
name = "zagtailcms"
version = "0.1.0"
description = "ALU Wagtail, GeoDjango and Lambda mashup"
authors = ["cam <Cameron.j.poole@gmail.com>"]
license = "MIT"
include = ['_sqlite3.so']

[tool.poetry.dependencies]
python = "3.7^"
Django = "<3.1,>=3.0"
django-s3-sqlite = {git = "https://github.com/Mappboy/django-s3-sqlite"}
django-s3-storage = "*"
wagtail = "<2.10,>=2.9"
zappa = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
